src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__initcap.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: "#[sqlfunc(sqlname = \"initcap\")]\nfn initcap<'a>(a: &'a str) -> String {\n    let mut out = String::new();\n    let mut capitalize_next = true;\n    for ch in a.chars() {\n        if capitalize_next {\n            out.extend(ch.to_uppercase())\n        } else {\n            out.extend(ch.to_lowercase())\n        };\n        capitalize_next = !ch.is_alphanumeric();\n    }\n    out\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Initcap;
impl crate::func::EagerUnaryFunc for Initcap {
    type Input<'a> = &'a str;
    type Output<'a> = String;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        initcap(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Initcap {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("initcap")
    }
}
fn initcap<'a>(a: &'a str) -> String {
    let mut out = String::new();
    let mut capitalize_next = true;
    for ch in a.chars() {
        if capitalize_next {
            out.extend(ch.to_uppercase())
        } else {
            out.extend(ch.to_lowercase())
        };
        capitalize_next = !ch.is_alphanumeric();
    }
    out
}
